--- a/EtsyRobot/Properties/Settings.settings
+++ b/EtsyRobot/Properties/Settings.settings
@@ -8,7 +8,7 @@
     <Setting Name="PageLoadTimeout" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">45</Value>
     </Setting>
-    <Setting Name="RemoteCommandTimeout" Type="System.Int32" Scope="Application">
+    <Setting Name="RemoteCommandTimeout" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">120</Value>
     </Setting>
     <Setting Name="RemoteWebDriverServerUrl" Type="System.String" Scope="Application">
