--- a/EtsyRobot/Properties/Settings.settings
+++ b/EtsyRobot/Properties/Settings.settings
@@ -15,7 +15,7 @@
       <Value Profile="(Default)">http://obkom.net.ua</Value>
     </Setting>
     <Setting Name="BrowserType" Type="EtsyRobot.Engine.WebSession.BrowserType" Scope="Application">
-      <Value Profile="(Default)">Firefox</Value>
+      <Value Profile="(Default)">Chrome</Value>
     </Setting>
     <Setting Name="StoragePath" Type="System.String" Scope="Application">
       <Value Profile="(Default)" />
@@ -28,6 +28,9 @@
     </Setting>
     <Setting Name="TeamsUrl" Type="System.String" Scope="User">
       <Value Profile="(Default)">https://www.etsy.com/teams/?show_panel=true</Value>
+    </Setting>
+    <Setting Name="FFProfile" Type="System.String" Scope="User">
+      <Value Profile="(Default)">ff_etsy</Value>
     </Setting>
   </Settings>
 </SettingsFile>
