--- a/EtsyRobot/packages.config
+++ b/EtsyRobot/packages.config
@@ -1,14 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Chromium.ChromeDriver" version="2.33" targetFramework="net461" />
-  <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
-  <package id="LinqKit" version="1.1.12" targetFramework="net461" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
+  <package id="LinqKit" version="1.1.9.0" targetFramework="net461" />
+  <package id="Microsoft.Data.Sqlite" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.EntityFrameworkCore.Sqlite" version="2.0.1" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
-  <package id="Selenium.Chrome.WebDriver" version="2.33" targetFramework="net461" />
+  <package id="Selenium.Chrome.WebDriver" version="2.35" targetFramework="net461" />
   <package id="Selenium.Firefox.WebDriver" version="0.19.1" targetFramework="net461" />
-  <package id="Selenium.Mozilla.Firefox.Webdriver" version="0.6.0.1" targetFramework="net461" />
   <package id="Selenium.RC" version="3.1.0" targetFramework="net461" />
-  <package id="Selenium.Support" version="3.8.0" targetFramework="net461" />
-  <package id="Selenium.WebDriver" version="3.8.0" targetFramework="net461" />
+  <package id="Selenium.Support" version="3.9.1" targetFramework="net461" />
+  <package id="Selenium.WebDriver" version="3.9.1" targetFramework="net461" />
+  <package id="Selenium.WebDriverBackedSelenium" version="3.9.1" targetFramework="net461" />
+  <package id="System.Data.SQLite" version="1.0.107.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.Core" version="1.0.107.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6" version="1.0.107.0" targetFramework="net461" />
+  <package id="System.Data.SQLite.EF6.Migrations" version="1.0.104" targetFramework="net461" />
+  <package id="System.Data.SQLite.Linq" version="1.0.107.0" targetFramework="net461" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
 </packages>
