--- a/EtsyRobot/app.config
+++ b/EtsyRobot/app.config
@@ -1,46 +1,86 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="EtsyRobot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-        <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="EtsyRobot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
-    <userSettings>
-        <EtsyRobot.Properties.Settings>
-            <setting name="RemoteCommandTimeout" serializeAs="String">
-                <value>120</value>
-            </setting>
-            <setting name="SiteUrl" serializeAs="String">
-                <value>https://www.etsy.com/</value>
-            </setting>
-            <setting name="TeamsUrl" serializeAs="String">
-                <value>https://www.etsy.com/teams/?show_panel=true</value>
-            </setting>
-        </EtsyRobot.Properties.Settings>
-    </userSettings>
-    <applicationSettings>
-        <EtsyRobot.Properties.Settings>
-            <setting name="UseRemoteWebDriver" serializeAs="String">
-                <value>False</value>
-            </setting>
-            <setting name="PageLoadTimeout" serializeAs="String">
-                <value>45</value>
-            </setting>
-            <setting name="RemoteWebDriverServerUrl" serializeAs="String">
-                <value>http://obkom.net.ua</value>
-            </setting>
-            <setting name="BrowserType" serializeAs="String">
-                <value>Firefox</value>
-            </setting>
-            <setting name="StoragePath" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="Setting" serializeAs="String">
-                <value />
-            </setting>
-        </EtsyRobot.Properties.Settings>
-    </applicationSettings>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="EtsyRobot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="EtsyRobot.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
+  <userSettings>
+    <EtsyRobot.Properties.Settings>
+      <setting name="RemoteCommandTimeout" serializeAs="String">
+        <value>120</value>
+      </setting>
+      <setting name="SiteUrl" serializeAs="String">
+        <value>https://www.etsy.com/</value>
+      </setting>
+      <setting name="TeamsUrl" serializeAs="String">
+        <value>https://www.etsy.com/teams/?show_panel=true</value>
+      </setting>
+      <setting name="FFProfile" serializeAs="String">
+        <value>ff_etsy</value>
+      </setting>
+    </EtsyRobot.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <EtsyRobot.Properties.Settings>
+      <setting name="UseRemoteWebDriver" serializeAs="String">
+        <value>False</value>
+      </setting>
+      <setting name="PageLoadTimeout" serializeAs="String">
+        <value>45</value>
+      </setting>
+      <setting name="RemoteWebDriverServerUrl" serializeAs="String">
+        <value>http://obkom.net.ua</value>
+      </setting>
+      <setting name="BrowserType" serializeAs="String">
+        <value>Chrome</value>
+      </setting>
+      <setting name="StoragePath" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Setting" serializeAs="String">
+        <value />
+      </setting>
+    </EtsyRobot.Properties.Settings>
+  </applicationSettings>
+  <system.data>
+    <DbProviderFactories>
+      <remove invariant="System.Data.SQLite.EF6" />
+      <add name="SQLite Data Provider (Entity Framework 6)" invariant="System.Data.SQLite.EF6" description=".NET Framework Data Provider for SQLite (Entity Framework 6)" type="System.Data.SQLite.EF6.SQLiteProviderFactory, System.Data.SQLite.EF6" />
+      <remove invariant="System.Data.SQLite" />
+      <add name="SQLite Data Provider" invariant="System.Data.SQLite" description=".NET Framework Data Provider for SQLite" type="System.Data.SQLite.SQLiteFactory, System.Data.SQLite" />
+    </DbProviderFactories>
+  </system.data>
+  <entityFramework>
+    <providers>
+      <provider invariantName="System.Data.SQLite.EF6" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SQLite" type="System.Data.SQLite.EF6.SQLiteProviderServices, System.Data.SQLite.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+    </providers>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
+      <parameters>
+        <parameter value="mssqllocaldb" />
+      </parameters>
+    </defaultConnectionFactory>
+  </entityFramework>
+  <connectionStrings>
+    <add name="CoreEntities" providerName="System.Data.SQLite" connectionString="Data Source=P:\var\EtsyRobot\etsy_robot2.db;Version=3;Journal Mode=Persist;" />
+  </connectionStrings>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.107.0" newVersion="1.0.107.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Data.SQLite.EF6" publicKeyToken="db937bc2d44ff139" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.0.107.0" newVersion="1.0.107.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
