--- a/EtsyRobot/packages.config
+++ b/EtsyRobot/packages.config
@@ -5,6 +5,8 @@
   <package id="LinqKit" version="1.1.9.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.EntityFrameworkCore.Sqlite" version="2.0.1" targetFramework="net461" />
+  <package id="MySql.Data" version="6.7.9" targetFramework="net461" />
+  <package id="MySql.Data.Entity" version="6.7.9" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="NLog" version="4.4.12" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.35" targetFramework="net461" />
