--- a/EtsyRobot/packages.config
+++ b/EtsyRobot/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ADGV" version="0.1.0.10" targetFramework="net461" />
   <package id="Chromium.ChromeDriver" version="2.33" targetFramework="net461" />
+  <package id="DataGridViewAutoFilter" version="1.0.0" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="LinqKit" version="1.1.9.0" targetFramework="net461" />
   <package id="Microsoft.Data.Sqlite" version="2.0.0" targetFramework="net461" />
